# rp-hal-rp2350-public

./: .gdbinit  Cargo.toml  README.md  build.sh  memory.x  rp235x_riscv.x
rp235x-hal/: Cargo.toml  README.md
rp235x-hal/examples/: adc.rs  adc_fifo_dma.rs  adc_fifo_irq.rs  adc_fifo_poll.rs  alloc.rs  arch_flip.rs  binary_info_demo.rs  blinky.rs  block_loop.rs  dht11.rs  float_test.rs  gpio_dyn_pin_array.rs  gpio_in_out.rs  gpio_irq_example.rs  i2c.rs  i2c_async.rs  i2c_async_cancelled.rs  lcd_display.rs  mem_to_mem_dma.rs  multicore_fifo_blink.rs  multicore_polyblink.rs  pio_blink.rs  pio_dma.rs  pio_proc_blink.rs  pio_side_set.rs  pio_synchronized.rs  powman_test.rs  pwm_blink.rs  pwm_blink_embedded_hal_1.rs  pwm_irq_input.rs  rom_funcs.rs  rosc_as_system_clock.rs  spi.rs  spi_dma.rs  uart.rs  uart_dma.rs  usb.rs  vector_table.rs  watchdog.rs
rp235x-hal/src/: adc.rs  arch.rs  block.rs  i2c.rs  lib.rs  multicore.rs  pio.rs  pll.rs  powman.rs  resets.rs  rosc.rs  spi.rs  ssi.rs  usb.rs  watchdog.rs  xosc.rs
rp235x-hal/src/binary_info/: mod.rs
rp235x-hal/src/clocks/: mod.rs
rp235x-hal/src/dma/: single_buffer.rs
rp235x-hal/src/gpio/: mod.rs
rp235x-hal/src/uart/: mod.rs
rp235x-hal/src/usb/: errata5.rs
rp235x-pac/: CHANGELOG.md  Cargo.toml  README.md  device.x  update.sh
rp235x-pac/src/: accessctrl.rs  accessctrl_apbs.rs  adc.rs  bootram.rs  busctrl.rs  clocks.rs  coresight_rp_ap_base_fixme.rs  coresight_trace.rs  dma.rs  eppb.rs  glitch_detector.rs  hstx_ctrl.rs  hstx_fifo.rs  i2c0.rs  io_bank0.rs  io_qspi.rs  lib.rs  otp.rs  otp_data.rs  otp_data_raw.rs  pads_bank0.rs  pads_qspi.rs  pio0.rs  pll_sys.rs  powman.rs  ppb.rs  psm.rs  pwm.rs  qmi.rs  resets.rs  riscv_csr_base_fixme.rs  riscv_dm_dummy_address_fixme.rs  rosc.rs  sha256.rs  sio.rs  spi0.rs  syscfg.rs  sysinfo.rs  tbman.rs  ticks.rs  (+11 more)
rp235x-pac/src/accessctrl/: adc0.rs  busctrl.rs  cfgreset.rs  clocks.rs  coresight_periph.rs  coresight_trace.rs  dma.rs  force_core_ns.rs  gpio_nsmask0.rs  gpio_nsmask1.rs  hstx.rs  i2c0.rs  i2c1.rs  io_bank0.rs  io_bank1.rs  lock.rs  otp.rs  pads_bank0.rs  pads_qspi.rs  pio0.rs  pio1.rs  pio2.rs  pll_sys.rs  pll_usb.rs  powman.rs  pwm.rs  resets.rs  rom.rs  rosc.rs  rsm.rs  sha256.rs  spi0.rs  spi1.rs  sram0.rs  sram1.rs  sram2.rs  sram3.rs  sram4.rs  sram5.rs  sram6.rs  (+19 more)
rp235x-pac/src/accessctrl_apbs/: adc0.rs  busctrl.rs  cfgreset.rs  clocks.rs  coresight_periph.rs  coresight_trace.rs  dma.rs  force_core_ns.rs  gpio_nsmask0.rs  gpio_nsmask1.rs  hstx.rs  i2c0.rs  i2c1.rs  io_bank0.rs  io_bank1.rs  lock.rs  otp.rs  pads_bank0.rs  pads_qspi.rs  pio0.rs  pio1.rs  pio2.rs  pll_sys.rs  pll_usb.rs  powman.rs  pwm.rs  resets.rs  rom.rs  rosc.rs  rsm.rs  sha256.rs  spi0.rs  spi1.rs  sram0.rs  sram1.rs  sram2.rs  sram3.rs  sram4.rs  sram5.rs  sram6.rs  (+19 more)
rp235x-pac/src/adc/: cs.rs  div.rs  fifo.rs  inte.rs  intf.rs  intr.rs  ints.rs  result.rs
rp235x-pac/src/bootram/: bootlock0.rs  bootlock1.rs  bootlock2.rs  bootlock3.rs  bootlock4.rs  bootlock5.rs  bootlock6.rs  bootlock7.rs  bootlock_stat.rs  write_once0.rs  write_once1.rs
rp235x-pac/src/busctrl/: bus_priority_ack.rs  perfctr0.rs  perfctr1.rs  perfctr2.rs  perfctr3.rs  perfctr_en.rs  perfsel0.rs  perfsel1.rs  perfsel2.rs  perfsel3.rs
rp235x-pac/src/clocks/: clk_adc_ctrl.rs  clk_adc_div.rs  clk_adc_selected.rs  clk_gpout0_ctrl.rs  clk_gpout0_div.rs  clk_gpout0_selected.rs  clk_gpout1_ctrl.rs  clk_gpout1_div.rs  clk_gpout1_selected.rs  clk_gpout2_ctrl.rs  clk_gpout2_div.rs  clk_gpout2_selected.rs  clk_gpout3_ctrl.rs  clk_gpout3_div.rs  clk_gpout3_selected.rs  clk_hstx_ctrl.rs  clk_hstx_div.rs  clk_hstx_selected.rs  clk_peri_ctrl.rs  clk_peri_div.rs  clk_peri_selected.rs  clk_ref_ctrl.rs  clk_ref_div.rs  clk_ref_selected.rs  clk_sys_div.rs  clk_sys_resus_ctrl.rs  clk_sys_resus_status.rs  clk_sys_selected.rs  clk_usb_ctrl.rs  clk_usb_div.rs  clk_usb_selected.rs  dftclk_lposc_ctrl.rs  dftclk_rosc_ctrl.rs  dftclk_xosc_ctrl.rs  enabled0.rs  enabled1.rs  fc0_delay.rs  fc0_interval.rs  fc0_result.rs  fc0_src.rs  (+7 more)
rp235x-pac/src/coresight_rp_ap_base_fixme/: ctrl.rs  dbg_pow_output_to_gpio.rs  dbg_pow_ovrd.rs  dbg_pow_state_sram0.rs  dbg_pow_state_sram1.rs  dbg_pow_state_swcore.rs  dbg_pow_state_xip.rs  dbgkey.rs  idr.rs
rp235x-pac/src/coresight_trace/: ctrl_status.rs  trace_capture_fifo.rs
rp235x-pac/src/dma/: ch.rs  ch0_dbg_tcr.rs  ch10_dbg_tcr.rs  ch11_dbg_tcr.rs  ch12_dbg_ctdreq.rs  ch12_dbg_tcr.rs  ch13_dbg_ctdreq.rs  ch13_dbg_tcr.rs  ch14_dbg_ctdreq.rs  ch14_dbg_tcr.rs  ch15_dbg_ctdreq.rs  ch15_dbg_tcr.rs  ch1_dbg_tcr.rs  ch2_dbg_tcr.rs  ch3_dbg_tcr.rs  ch4_dbg_tcr.rs  ch5_dbg_tcr.rs  ch6_dbg_tcr.rs  ch7_dbg_tcr.rs  ch8_dbg_tcr.rs  ch9_dbg_tcr.rs  chan_abort.rs  fifo_levels.rs  inte0.rs  inte1.rs  inte2.rs  inte3.rs  intf0.rs  intf1.rs  intf2.rs  intf3.rs  intr.rs  intr1.rs  intr2.rs  intr3.rs  ints0.rs  ints1.rs  ints2.rs  ints3.rs  mpu_bar0.rs  (+45 more)
rp235x-pac/src/eppb/: nmi_mask0.rs  nmi_mask1.rs  sleepctrl.rs
rp235x-pac/src/glitch_detector/: arm.rs  disarm.rs  lock.rs  sensitivity.rs  trig_force.rs  trig_status.rs
rp235x-pac/src/hstx_ctrl/: bit0.rs  bit1.rs  bit2.rs  bit3.rs  bit4.rs  bit5.rs  bit6.rs  bit7.rs  csr.rs  expand_shift.rs  expand_tmds.rs
rp235x-pac/src/hstx_fifo/: fifo.rs  stat.rs
rp235x-pac/src/i2c0/: ic_ack_general_call.rs  ic_clr_activity.rs  ic_clr_gen_call.rs  ic_clr_intr.rs  ic_clr_rd_req.rs  ic_clr_restart_det.rs  ic_clr_rx_done.rs  ic_clr_rx_over.rs  ic_clr_rx_under.rs  ic_clr_start_det.rs  ic_clr_stop_det.rs  ic_clr_tx_abrt.rs  ic_clr_tx_over.rs  ic_comp_param_1.rs  ic_comp_type.rs  ic_comp_version.rs  ic_con.rs  ic_data_cmd.rs  ic_dma_cr.rs  ic_dma_rdlr.rs  ic_dma_tdlr.rs  ic_enable.rs  ic_enable_status.rs  ic_fs_scl_hcnt.rs  ic_fs_scl_lcnt.rs  ic_fs_spklen.rs  ic_intr_mask.rs  ic_intr_stat.rs  ic_raw_intr_stat.rs  ic_rx_tl.rs  ic_rxflr.rs  ic_sar.rs  ic_sda_hold.rs  ic_sda_setup.rs  ic_slv_data_nack_only.rs  ic_ss_scl_hcnt.rs  ic_ss_scl_lcnt.rs  ic_status.rs  ic_tar.rs  ic_tx_abrt_source.rs  (+2 more)
rp235x-pac/src/io_bank0/: gpio.rs  (+19 more)
rp235x-pac/svd/: rp235x.svd  rp235x.svd.patched  rp235x.yaml
(+1694 files in other folders)
