[package]
name = "rp235x-pac"
version = "0.6.0"
authors = ["The RP-RS team"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp235x-pac"
description = "A Peripheral Access Crate for the Raspberry Pi RP235x microcontrollers"
license = "BSD-3-Clause"
repository = "https://github.com/rp-rs/rp235x-pac"

[package.metadata.docs.rs]
features = ["rt"]
targets = ["thumbv8m.main-none-eabihf", "riscv32imac-unknown-none-elf"]

[dependencies]
vcell = "0.1.3"
critical-section = { optional = true, version = "1.0.0" }

[target.'thumbv8m.main-none-eabihf'.dependencies]
cortex-m = "0.7.3"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }

[features]
rt = ["cortex-m-rt", "cortex-m-rt/device"]

[package.metadata.cargo-udeps.ignore]
normal = ["cortex-m-rt"]
